--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&family=Donegal+One&display=swap"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
